<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MagSDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_result">搜索结果</string>
    <string name="entry_conten">请输入内容</string>
    <string name="data_empty">没有数据</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="scard_not_exits">scard卡不存在</string>

    <string name="web_title">期刊库</string>
    <string name="local_title">期刊架</string>
    <string name="search_hint">搜索期刊库</string>
    
    <string-array name="catalog_array">
        <item >推荐</item>
        <item >最新</item>
        <item >分类</item>
        <item >文章</item>
    </string-array>
    
    <string-array name="catalog_array2">
        <item >人文科学</item>
        <item >政法时事</item>
        <item >医学保健</item>
        <item >通信科技</item>
        <item >商业财经</item>
        <item >生活休闲</item>
        <item >艺术传媒</item>
        <item >文学教育</item>
    </string-array>
     
    <string name="feshonLive">时尚生活</string>
    <string name="sport">运动健康</string>
    <string name="business">商业财经</string>
    <string name="xiuxian">休闲娱乐</string>
    <string name="educate">教育科技</string>
    <string name="newsperson">新闻人物</string>
    <string name="wenhua">文化艺术</string>
    <string name="qikanku">期刊库</string>
    <string name="qikanjia">期刊架</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    
    <string name="btn_read_online">在线试读</string>
    <string name="btn_add_local">原版下载</string>
    <string name="btn_mag_article">图文阅读</string>
    <string name="article_list">文章列表</string>
    
    <string name="mag_des">期刊简介</string>
    <string name="mag_detail">期刊详情</string>
    
    
    <string name="r_refresh_ing">正在刷新中&#8230;</string>
    <string name="r_pull_refresh">下拉刷新</string>
    <string name="r_undo_refresh">松开后刷新</string>
    <string name="r_load_more_data">正在加载更多&#8230;</string>
    
</resources>
